about me article updated

--- a/index.html
+++ b/index.html
@@ -49,12 +49,19 @@
         <div class="split right">
             <div class="rightarticle">
                 <h2>ABOUT ME</h2>
-                <p>The world of IT and programming, developing has always been an exciting, iteresting field for me.<br>After five years of working in healthcare,
-                     I decided to attend Újratervezés 2.0 which is a government subsidised programme for people that would like to switch their careers and learn programming.
+                <p>The world of IT and programming, developing has always been an exciting, iteresting field for
+                    me.<br>After five years of working in healthcare,
+                    I decided to attend Újratervezés 2.0 which is a government subsidised programme for people that
+                    would like to switch their careers and learn programming.
                     I finished my studies as Java backend developer at Green Fox Academy. <br>
-                    Being a junior Java developer I would like to make good use of my knowledge by acquiring an occupation in the fields of programming where 
+                    I learned how to implement Java APIs and REST APIs using Spring framework, Gradle, connecting Spring
+                    project to MySQL database, creating dynamic HTML pages with Thymeleaf applied, styling with CSS,
+                    Bootstrap.
+                    Being a junior Java developer I would like to make good use of my knowledge by acquiring an
+                    occupation in the fields of programming where
                     I can make further improvements in my skills by gathering experience.<br>
-                    My future plans include learning JavaScript and other programming languages, so I can be a full stack developer.
+                    My future plans include learning JavaScript and other programming languages, so I can be a full
+                    stack developer.
             </div>
             <div class="rightarticle">
                 <h2>STUDIES</h2>
@@ -77,10 +84,12 @@
 
                 <ul>
                     <li>
-                        <p><b class="dates">2017. july - </b>Medical Centre, Hungarian Defence Forces - Physical therapist</p>
+                        <p><b class="dates">2017. july - </b>Medical Centre, Hungarian Defence Forces - Physical
+                            therapist</p>
                     </li>
                     <li>
-                        <p><b class="dates">2018. july - 2021. july - </b>Vitalorg private clinic - Physical therapist</p>
+                        <p><b class="dates">2018. july - 2021. july - </b>Vitalorg private clinic - Physical therapist
+                        </p>
                     </li>
 
                     <li>
@@ -132,9 +141,11 @@
                     <h2>MY GOALS</h2>
                     <ul>
                         <li>To be part of a dynamic, helpful group where I can make good use of my skills</li>
-                        <li>To expand my knowledge, apply, learn new programming technologies to improve my projects</li>
+                        <li>To expand my knowledge, apply, learn new programming technologies to improve my projects
+                        </li>
                         <li>To acquire further knowledge in front end developing besides backend</li>
-                        <li>To achieve success in my developer career, giving me strength to perform even better on future projects</li>
+                        <li>To achieve success in my developer career, giving me strength to perform even better on
+                            future projects</li>
                     </ul>
                 </div>
             </div>
