--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <div class="split right">
             <div class="rightarticle">
                 <h2>ABOUT ME</h2>
-                <p>The world of IT and programming, developing has always been an exciting, iteresting field for
+                <p>The world of IT and programming, developing has always been an exciting, interesting field for
                     me.<br>After five years of working in healthcare,
                     I decided to attend Újratervezés 2.0 which is a government subsidised programme for people that
                     would like to switch their careers and learn programming.
                     I finished my studies as Java backend developer at Green Fox Academy. <br>
                     I learned how to implement Java APIs and REST APIs using Spring framework, Gradle, connecting Spring
-                    project to MySQL database, creating dynamic HTML pages with Thymeleaf applied, styling with CSS,
+                    project to MySQL databases, creating dynamic HTML pages with Thymeleaf applied, styling with CSS,
                     Bootstrap.
                     Being a junior Java developer I would like to make good use of my knowledge by acquiring an
                     occupation in the fields of programming where
@@ -115,7 +115,7 @@
                         <p>B2 - English, Intermediate level</p>
                     </li>
                     <li>
-                        <p>Flutent communication skills in English</p>
+                        <p>Fluent communication skills in English</p>
                     </li>
                 </ul>
             </div>
