about me article updated

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
                 <h2>ABOUT ME</h2>
                 <p>The world of IT and programming, developing has always been an exciting, interesting field for
                     me.<br>After five years of working in healthcare,
-                    I decided to attend Újratervezés 2.0 which is a government subsidised programme for people that
-                    would like to switch their careers and learn programming.
-                    I finished my studies as Java backend developer at Green Fox Academy. <br>
+                    I decided to attend a bootcamp at Green Fox Academy to become a Java backend developer.
                     I learned how to implement Java APIs and REST APIs using Spring framework, Gradle, connecting Spring
                     project to MySQL databases, creating dynamic HTML pages with Thymeleaf applied, styling with CSS,
                     Bootstrap.
