about me article updated

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="goals">
                     <h2>MY GOALS</h2>
                     <ul>
-                        <li>To be part of a dynamic, helpful group where I can make good use of my skills</li>
+                        <li>To be part of a dynamic, helpful, agile(SCRUM) group where I can make good use of my skills</li>
                         <li>To expand my knowledge, apply, learn new programming technologies to improve my projects
                         </li>
                         <li>To acquire further knowledge in front end developing besides backend</li>
