CV updated with new picture, new workplace added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="profile">
-                <img src="images\profile.jpg" alt="profilkep">
+                <img src="images\profile.jpeg" alt="profilkep">
             </div>
             <div class="contact">
                 <h2>CONTACT</h2>
@@ -82,7 +82,10 @@
 
                 <ul>
                     <li>
-                        <p><b class="dates">2017. july - </b>Medical Centre, Hungarian Defence Forces - Physical
+                        <p><b class="dates">2022. july - </b>Citi - Apps Dev Programmer Analyst</p>
+                    </li>
+                    <li>
+                        <p><b class="dates">2017. july - 2022. july - </b>Medical Centre, Hungarian Defence Forces - Physical
                             therapist</p>
                     </li>
                     <li>
