--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     me.<br>After five years of working in healthcare,
                     I decided to attend a bootcamp at Green Fox Academy to become a Java backend developer.
                     I learned how to implement Java APIs and REST APIs using Spring framework, Gradle, connecting Spring
-                    project to MySQL databases, creating dynamic HTML pages with Thymeleaf applied, styling with CSS,
+                    project to MySQL, H2 databases, creating dynamic HTML pages with Thymeleaf applied, styling with CSS,
                     Bootstrap.
                     Being a junior Java developer I would like to make good use of my knowledge by acquiring an
                     occupation in the fields of programming where
@@ -111,7 +111,9 @@
                 <h2>LANGUAGES</h2>
 
                 <ul>
-
+                    <li>
+                        <p>Hungarian - Mother tongue</p>
+                    </li>
                     <li>
                         <p>B2 - English, Intermediate level</p>
                     </li>
@@ -141,12 +143,11 @@
                 <div class="goals">
                     <h2>MY GOALS</h2>
                     <ul>
-                        <li>To be part of a dynamic, helpful, agile(SCRUM) group where I can make good use of my skills</li>
-                        <li>To expand my knowledge, apply, learn new programming technologies to improve my projects
-                        </li>
-                        <li>To acquire further knowledge in front end developing besides backend</li>
-                        <li>To achieve success in my developer career, giving me strength to perform even better on
-                            future projects</li>
+                        <li>- be part of a dynamic, helpful, agile(SCRUM) group where I can make good use of my skills</li>
+                        <li>- expand my knowledge, apply, learn new programming technologies to improve my projects</li>
+                        <li>- acquire further knowledge in front end developing besides backend</li>
+                        <li>- achieve success in my developer career, giving me strength to perform even better onfuture projects</li>
+                        <li>- complete as many trainings on programming and IT as I can</li>
                     </ul>
                 </div>
             </div>
