--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                 <div class="goals">
                     <h2>MY GOALS</h2>
                     <ul>
-                        <li>- be part of a dynamic, helpful, agile(SCRUM) group where I can make good use of my skills</li>
-                        <li>- expand my knowledge, apply, learn new programming technologies to improve my projects</li>
-                        <li>- acquire further knowledge in front end developing besides backend</li>
-                        <li>- achieve success in my developer career, giving me strength to perform even better onfuture projects</li>
-                        <li>- complete as many trainings on programming and IT as I can</li>
+                        <li> be part of a dynamic, helpful, agile(SCRUM) group where I can make good use of my skills</li>
+                        <li> expand my knowledge, apply, learn new programming technologies to improve my projects</li>
+                        <li> acquire further knowledge in front end developing besides backend</li>
+                        <li> achieve success in my developer career, giving me strength to perform even better onfuture projects</li>
+                        <li> complete as many trainings on programming and IT as I can</li>
                     </ul>
                 </div>
             </div>
