latest update in CV

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="introduction">
                 <div>
                     <h2>VÖRÖS MIKLÓS</h2>
-                    <h4>Junior Java backend developer</h4>
+                    <h4>Java developer</h4>
                 </div>
             </div>
             <div class="profile">
@@ -26,7 +26,7 @@
                 <h2>CONTACT</h2>
                 <p><i class="fa-solid fa-house-chimney"></i><b> Address: </b>1088, Budapest, Rákóczi street 47. 3/4</p>
                 <p><i class="fa-solid fa-envelope"></i><b> E-mail: </b>v.miklos.gyt@gmail.com </p>
-                <p><i class="fa-solid fa-blender-phone"></i><b> Phone: </b>+3630/8484-111 </p>
+                <p><i class="fa-solid fa-blender-phone"></i><b> Phone: </b>+36308484111 </p>
             </div>
             <div class="links">
                 <h2>LINKS</h2>
@@ -55,11 +55,16 @@
                     I learned how to implement Java APIs and REST APIs using Spring framework, Gradle, connecting Spring
                     project to MySQL, H2 databases, creating dynamic HTML pages with Thymeleaf applied, styling with CSS,
                     Bootstrap.
-                    Being a junior Java developer I would like to make good use of my knowledge by acquiring an
+                    As an enthusiastic Java developer I would like to make good use of my knowledge by acquiring an
                     occupation in the fields of programming where
                     I can make further improvements in my skills by gathering experience.<br>
-                    My future plans include learning JavaScript and other programming languages, so I can be a full
-                    stack developer.
+                    My future plans include gathering knowledge and hands-on experience with most of the softwares that are commonly used along Java code,<br>
+                    I also would like to learn JavaScript and other programming languages, so I can be a full stack developer.
+                    Due to my prior working experiences I learned how to work on big projects with 20+ teammates on the team while implementing
+                    Java code that is connected with MongoDB, Sybase and Oracle SQL databases while using Bitbucket collaboration tool, managing Jenkins pipelines, 
+                    SonarQube builds and Jira issue tracking to maintain a smooth flow in the process.
+                    Learned to apply different regulations on data and aggregate, then visualize it for the users.
+                    I am eager to learn new technologies, always looking to expand my knowledge base in every possible way.
             </div>
             <div class="rightarticle">
                 <h2>STUDIES</h2>
@@ -82,7 +87,10 @@
 
                 <ul>
                     <li>
-                        <p><b class="dates">2022. july - </b>Citi - Apps Dev Programmer Analyst</p>
+                        <p><b class="dates">2023. may - </b>Citi - Apps Dev Intermediate Programmer Analyst</p>
+                    </li>
+                    <li>
+                        <p><b class="dates">2022. july - 2023. may </b>Citi - Apps Dev Programmer Analyst</p>
                     </li>
                     <li>
                         <p><b class="dates">2017. july - 2022. july - </b>Medical Centre, Hungarian Defence Forces - Physical
@@ -146,7 +154,7 @@
                         <li> be part of a dynamic, helpful, agile(SCRUM) group where I can make good use of my skills</li>
                         <li> expand my knowledge, apply, learn new programming technologies to improve my projects</li>
                         <li> acquire further knowledge in front end developing besides backend</li>
-                        <li> achieve success in my developer career, giving me strength to perform even better onfuture projects</li>
+                        <li> achieve success in my developer career, giving me strength to perform even better on future projects</li>
                         <li> complete as many trainings on programming and IT as I can</li>
                     </ul>
                 </div>
