new experience logos added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <img src="images\git.png" style="width: 65px; height: 65px;" alt="git">
                 <img src="images\htmlcss.png" style="width: 87px; height: 52px;" alt="htmlcss">
                 <img src="images\docker.png" style="width: 60px; height: 52px;" alt="docker">
+                <img src="images\batch.png" style="width: 60px; height: 60px;" alt="batch">
+                <img src="images\oracle.png" style="width: 50px; height: 50px;" alt="oracle">
+                <img src="images\jira.png" style="width: 70px; height: 60px;" alt="jira">
+                <img src="images\bitbucket.png" style="width: 50px; height: 50px;" alt="bitbucket">
             </div>
         </div>
         <div class="split right">
