new experience logos added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 <img src="images\oracle.png" style="width: 50px; height: 50px;" alt="oracle">
                 <img src="images\jira.png" style="width: 70px; height: 60px;" alt="jira">
                 <img src="images\bitbucket.png" style="width: 50px; height: 50px;" alt="bitbucket">
+                <img src="images\sybase.png" style="width: 100px; height: 30px;" alt="sybase">
+                <img src="images\mongo.png" style="width: 100px; height: 30px;" alt="mongo">
             </div>
         </div>
         <div class="split right">
