--- a/index.html
+++ b/index.html
@@ -70,7 +70,26 @@
                     Java code that is connected with MongoDB, Sybase and Oracle SQL databases while using Bitbucket collaboration tool, managing Jenkins pipelines, 
                     SonarQube builds and Jira issue tracking to maintain a smooth flow in the process.
                     Learned to apply different regulations on data and aggregate, then visualize it for the users.
+                    At Citi, after my promotion I was moved to a team that uses different comparison tools to validate other teams' (like the one I was in before) 
+                    output files for the smooth flow without data quality issues.
                     I am eager to learn new technologies, always looking to expand my knowledge base in every possible way.
+            </div>
+            <div class="rightarticle">
+                <h2>TECH STACK</h2>
+                <ul>
+                    <li>Relational databases(H2,Oracle, MySQL, Sybase), NoSQL(MongoDB)</li>
+                    <li>Java 8-11-17-19</li>
+                    <li>Basic Javascript knowledge - Dynamic webpages with HTML code and Java controller</li>
+                    <li>HTML, CSS, Thymeleaf</li>
+                    <li>Spring Boot, Spring Batch, Spring Framework</li>
+                    <li>Rest API, Controller, RestController</li>
+                    <li>JUnit 4-5</li>
+                    <li>Maven, Gradle build tools</li>
+                    <li>Jenkins, SonarQube</li>
+                    <li>GitHub, BitBucket, Jira, Confluence</li>
+                    <li>Git version control</li>
+                    <li>Linux commands</li>
+                </ul>
             </div>
             <div class="rightarticle">
                 <h2>STUDIES</h2>
@@ -151,6 +170,9 @@
                         </li>
                         <li>
                             <p>Team spirit</p>
+                        </li>
+                        <li>
+                            <p>Always happy to help, to teach</p>
                         </li>
                     </ul>
                 </div>
