fixes on intorduction

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                     occupation in the fields of programming where
                     I can make further improvements in my skills by gathering experience.<br>
                     My future plans include gathering knowledge and hands-on experience with most of the softwares that are commonly used along Java code,<br>
-                    I also would like to learn JavaScript and other programming languages, so I can be a full stack developer.
+                    I also would like to learn JavaScript and other programming languages, so I can be a full stack developer.<br>
                     Due to my prior working experiences I learned how to work on big projects with 20+ teammates on the team while implementing
                     Java code that is connected with MongoDB, Sybase and Oracle SQL databases while using Bitbucket collaboration tool, managing Jenkins pipelines, 
-                    SonarQube builds and Jira issue tracking to maintain a smooth flow in the process.
-                    Learned to apply different regulations on data and aggregate, then visualize it for the users.
+                    SonarQube builds and Jira issue tracking to maintain a smooth flow in the process.<br>
+                    Learned to apply different regulations on data and aggregate, then visualize it for the users.<br>
                     At Citi, after my promotion I was moved to a team that uses different comparison tools to validate other teams' (like the one I was in before) 
-                    output files for the smooth flow without data quality issues.
+                    various output files in different versions for the smooth flow without data quality issues after new implementations.<br>
                     I am eager to learn new technologies, always looking to expand my knowledge base in every possible way.
             </div>
             <div class="rightarticle">
