--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="split left">
             <div class="introduction">
                 <div>
-                    <h2>VÖRÖS MIKLÓS</h2>
+                    <h2>Vörös Miklós</h2>
                     <h4>Java developer</h4>
                 </div>
             </div>
@@ -23,18 +23,18 @@
                 <img src="images\profile.jpeg" alt="profilkep">
             </div>
             <div class="contact">
-                <h2>CONTACT</h2>
-                <p><i class="fa-solid fa-house-chimney"></i><b> Address: </b>1088, Budapest, Rákóczi street 47. 3/4</p>
+                <h2>Contact</h2>
+                <p><i class="fa-solid fa-house-chimney"></i><b> Location: </b>Budapest</p>
                 <p><i class="fa-solid fa-envelope"></i><b> E-mail: </b>v.miklos.gyt@gmail.com </p>
                 <p><i class="fa-solid fa-blender-phone"></i><b> Phone: </b>+36308484111 </p>
             </div>
             <div class="links">
-                <h2>LINKS</h2>
+                <h2>Links</h2>
                 <a href="https://www.linkedin.com/in/mikl%C3%B3s-v%C3%B6r%C3%B6s-277066234/">My LinkedIn profile</a>
                 <a href="https://github.com/mikica01">My GitHub profile</a>
             </div>
             <div class="programmingskillstitle">
-                <h2>PROGRAMMING EXPERIENCES</h2>
+                <h2></h2>
             </div>
             <div class="programmingskills">
                 <img src="images\java.png" style="width: 40px; height: 75px;" alt="java">
@@ -54,62 +54,34 @@
         </div>
         <div class="split right">
             <div class="rightarticle">
-                <h2>ABOUT ME</h2>
-                <p>The world of IT and programming, developing has always been an exciting, interesting field for
-                    me.<br>After five years of working in healthcare,
-                    I decided to attend a bootcamp at Green Fox Academy to become a Java backend developer.
-                    I learned how to implement Java APIs and REST APIs using Spring framework, Gradle, connecting Spring
-                    project to MySQL, H2 databases, creating dynamic HTML pages with Thymeleaf applied, styling with CSS,
-                    Bootstrap.
-                    As an enthusiastic Java developer I would like to make good use of my knowledge by acquiring an
-                    occupation in the fields of programming where
-                    I can make further improvements in my skills by gathering experience.<br>
-                    My future plans include gathering knowledge and hands-on experience with most of the softwares that are commonly used along Java code,<br>
-                    I also would like to learn JavaScript and other programming languages, so I can be a full stack developer.<br>
-                    Due to my prior working experiences I learned how to work on big projects with 20+ teammates on the team while implementing
-                    Java code that is connected with MongoDB, Sybase and Oracle SQL databases while using Bitbucket collaboration tool, managing Jenkins pipelines, 
-                    SonarQube builds and Jira issue tracking to maintain a smooth flow in the process.<br>
-                    Learned to apply different regulations on data and aggregate, then visualize it for the users.<br>
-                    At Citi, after my promotion I was moved to a team that uses different comparison tools to validate other teams' (like the one I was in before) 
-                    various output files in different versions for the smooth flow without data quality issues after new implementations.<br>
-                    I am eager to learn new technologies, always looking to expand my knowledge base in every possible way.
+                <h2>About me</h2>
+                <p>A highly motivated and versatile Java developer at Citibank, I bring a unique background as a former physiotherapist, infusing a holistic approach into my work. 
+                Eager to learn and explore new technologies, I am committed to expanding my skills and contributing to the success of innovative projects. 
+                I am passionate about leveraging cutting-edge technologies to create innovative solutions. 
+                I have a wealth of experience in developing and maintaining dynamic, robust Java Spring Boot and Spring Batch applications.
+                Furthermore, my expertise extends to business and financial data analysis, UI development with Thymeleaf and JavaScript - 
+                with a keen interest in expanding my skills to encompass front-end development, 
+                and implementing testing tools to ensure data quality and consistency.</p>
             </div>
             <div class="rightarticle">
-                <h2>TECH STACK</h2>
+                <h2>Key skills and expertise</h2>
                 <ul>
-                    <li>Relational databases(H2,Oracle, MySQL, Sybase), NoSQL(MongoDB)</li>
-                    <li>Java 8-11-17-19</li>
-                    <li>Basic Javascript knowledge - Dynamic webpages with HTML code and Java controller</li>
-                    <li>HTML, CSS, Thymeleaf</li>
-                    <li>Spring Boot, Spring Batch, Spring Framework</li>
-                    <li>Rest API, Controller, RestController</li>
-                    <li>JUnit 4-5</li>
-                    <li>Maven, Gradle build tools</li>
-                    <li>Jenkins, SonarQube</li>
-                    <li>GitHub, BitBucket, Jira, Confluence</li>
-                    <li>Git version control</li>
-                    <li>Linux commands</li>
-                </ul>
+                <li>Java Development: Proven expertise in Java programming, with a focus on delivering efficient and scalable backend solutions for 
+                dynamic Java Spring Boot and Spring Batch applications.</li>
+                <li>API Development: Experience in designing and implementing APIs and Rest APIs for seamless integration and communication.</li>
+                <li>Data Analysis: Skilled in business and financial data analysis, ensuring data-driven insights for informed decision-making.</li>
+                <li>UI Development: Proficient in creating dynamic and feature-rich user interfaces using Thymeleaf, JavaScript, HTML, and CSS.</li>
+                <li>Database Management: Expertise in working with both NoSQL (MongoDB) and relational databases (Oracle, MySQL, Sybase) to store and retrieve data efficiently.</li>
+                <li>Testing and Quality Assurance: Implemented testing tools for downstream processes, emphasizing data quality and consistency. Proficient in JUnit4-5 and Mockito for comprehensive testing.</li>
+                <li>Continuous Learning: A dedicated learner with a proactive approach to staying updated on emerging technologies and industry best practices.</li>
+                <li>Versatility: Possess the ability to seamlessly adapt to new technologies and frameworks, ensuring a holistic understanding of the development landscape.</li>
+                <li>Agile Collaboration: Well-versed in agile development methodologies, emphasizing adaptability and collaboration to achieve project success 
+                and to ensure a smooth flow of the development process through regular meetings and assessments.
+                <br>Also experienced in leading development for minor projects</li>
+            </ul>
             </div>
             <div class="rightarticle">
-                <h2>STUDIES</h2>
-                <ul>
-                    <li>
-                        <p><b class="dates">2021. october - 2022. march - </b>Green Fox Academy - Java
-                            backend-developer</p>
-                    </li>
-                    <li>
-                        <p><b class="dates">2013-2017 - </b>Semmelweis University Faculty of Health Sciences -
-                            Physical therapist</p>
-                    </li>
-                    <li>
-                        <p><b class="dates">2008-2013 - </b>Dr. Mező Ferenc Secondary School Nagykanizsa</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="rightarticle">
-                <h2>PREVIOUS WORK EXPERIENCE</h2>
-
+                <h2>Work experience</h2>
                 <ul>
                     <li>
                         <p><b class="dates">2023. may - </b>Citi - Apps Dev Intermediate Programmer Analyst</p>
@@ -125,7 +97,6 @@
                         <p><b class="dates">2018. july - 2021. july - </b>Vitalorg private clinic - Physical therapist
                         </p>
                     </li>
-
                     <li>
                         <p> <b class="dates">2017. december - 2018. august - </b> </b>Life1 Corvin - Masseur,
                             Physical therapist</p>
@@ -134,57 +105,63 @@
                         <p> <b class="dates">2017. july - 2017. december - </b>Reitter private clinic -
                             Post myocardial infarction rehabilitation </p>
                     </li>
+                </ul>
+            </div>
+            <div class="rightarticle">
+                <h2>Tech stack</h2>
+                <ul>
+                    <li><b>JDKs:</b> 8-11-17-19</li>
+                    <li><b>Relational databases:</b> H2,Oracle, MySQL, Sybase, <b>NoSQL:</b> MongoDB</li>
+                    <li><b>Front end:</b> HTML, CSS, Thymeleaf, Javascript, MVC applications</li>
+                    <li><b>Spring famework:</b> Spring Boot, Spring Batch</li>
+                    <li><b>API Development:</b> Rest APIs</li>
+                    <li><b>Testing:</b> JUnit 4-5, Mockito</li>
+                    <li><b>Build tools:</b> Maven, Gradle</li>
+                    <li><b>CI/CD:</b> Jenkins</li>
+                    <li><b>Code Quality:</b> SonarQube</li>
+                    <li><b>Collaboration tools:</b> GitHub, BitBucket, Jira, Confluence</li>
+                    <li><b>Version control:</b> Git</li>
+                    <li><b>Scripting:</b> Bash, linux commands</li>
+                </ul>
+            </div>
+            <div class="rightarticle">
+                <h2>Studies</h2>
+                <ul>
                     <li>
-                        <p><b class="dates">2016. june - 2016. september - </b>London beauty studio -
-                            Masseur</p>
+                        <p><b class="dates">2021. october - 2022. march - </b>Green Fox Academy - Java
+                            backend-developer</p>
+                    </li>
+                    <li>
+                        <p><b class="dates">2013-2017 - </b>Semmelweis University Faculty of Health Sciences -
+                            Physical therapist</p>
+                    </li>
+                    <li>
+                        <p><b class="dates">2008-2013 - </b>Dr. Mező Ferenc Secondary School Nagykanizsa</p>
                     </li>
                 </ul>
             </div>
             <div class="rightarticle">
-                <h2>LANGUAGES</h2>
+                <h2>Languages</h2>
 
                 <ul>
                     <li>
                         <p>Hungarian - Mother tongue</p>
                     </li>
                     <li>
-                        <p>B2 - English, Intermediate level</p>
-                    </li>
-                    <li>
-                        <p>Fluent communication skills in English</p>
+                        <p>English - Fluent</p>
                     </li>
                 </ul>
             </div>
-            <div class="skills">
-                <div class="skillpoints">
-                    <h2>SOFT SKILLS</h2>
-                    <ul>
-                        <li>
-                            <p>Agile, proactive personality</p>
-                        </li>
-                        <li>
-                            <p>Good problem solving skills</p>
-                        </li>
-                        <li>
-                            <p>Analytical thinking</p>
-                        </li>
-                        <li>
-                            <p>Team spirit</p>
-                        </li>
-                        <li>
-                            <p>Always happy to help, to teach</p>
-                        </li>
-                    </ul>
-                </div>
                 <div class="goals">
-                    <h2>MY GOALS</h2>
-                    <ul>
-                        <li> be part of a dynamic, helpful, agile(SCRUM) group where I can make good use of my skills</li>
-                        <li> expand my knowledge, apply, learn new programming technologies to improve my projects</li>
-                        <li> acquire further knowledge in front end developing besides backend</li>
-                        <li> achieve success in my developer career, giving me strength to perform even better on future projects</li>
-                        <li> complete as many trainings on programming and IT as I can</li>
-                    </ul>
+                    <h2>Career Aspirations</h2>
+                    <p>Eager to be part of a dynamic and agile group, my goal is to continually expand my knowledge and skill set, 
+                        in both back- and front-end development and data analysis, 
+                        creating innovative solutions and ensuring success in future endeavors.
+                        Committed to both personal and professional growth, I am always ready to learn and contribute, 
+                        fostering a collaborative environment where knowledge-sharing and mentorship thrive. 
+                        Known for my enthusiasm and willingness to support others, I aspire to be an influential team member, 
+                        fostering innovation and success in the ever-evolving landscape of software development.
+                        With a focus on excellence, I aim to achieve success in my developing career and make meaningful contributions to future developments.</p>
                 </div>
             </div>
         </div>
