CV finishing touches

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2>Contact</h2>
                 <p><i class="fa-solid fa-house-chimney"></i><b> Location: </b>Budapest</p>
                 <p><i class="fa-solid fa-envelope"></i><b> E-mail: </b>v.miklos.gyt@gmail.com </p>
-                <p><i class="fa-solid fa-blender-phone"></i><b> Phone: </b>+36308484111 </p>
+                <p><i class="fa-solid fa-phone"></i><b> Phone: </b>+36308484111 </p>
             </div>
             <div class="links">
                 <h2>Links</h2>
@@ -56,9 +56,9 @@
             <div class="rightarticle">
                 <h2>About me</h2>
                 <p>A highly motivated and versatile Java developer at Citibank, I bring a unique background as a former physiotherapist, infusing a holistic approach into my work. 
-                Eager to learn and explore new technologies, I am committed to expanding my skills and contributing to the success of innovative projects. 
-                I am passionate about leveraging cutting-edge technologies to create innovative solutions. 
-                I have a wealth of experience in developing and maintaining dynamic, robust Java Spring Boot and Spring Batch applications.
+                Eager to learn and explore new technologies, I am committed to increasing my knowledge base and contributing to the success of innovative projects. <br>
+                I am passionate about leveraging cutting-edge technologies to create innovative solutions. <br>
+                I have a wealth of experience in developing and maintaining robust Java applications. <br>
                 Furthermore, my expertise extends to business and financial data analysis, UI development with Thymeleaf and JavaScript - 
                 with a keen interest in expanding my skills to encompass front-end development, 
                 and implementing testing tools to ensure data quality and consistency.</p>
@@ -66,16 +66,16 @@
             <div class="rightarticle">
                 <h2>Key skills and expertise</h2>
                 <ul>
-                <li>Java Development: Proven expertise in Java programming, with a focus on delivering efficient and scalable backend solutions for 
+                <li><b>Java Development:</b> Proven expertise in Java programming, with a focus on delivering efficient and scalable backend solutions for 
                 dynamic Java Spring Boot and Spring Batch applications.</li>
-                <li>API Development: Experience in designing and implementing APIs and Rest APIs for seamless integration and communication.</li>
-                <li>Data Analysis: Skilled in business and financial data analysis, ensuring data-driven insights for informed decision-making.</li>
-                <li>UI Development: Proficient in creating dynamic and feature-rich user interfaces using Thymeleaf, JavaScript, HTML, and CSS.</li>
-                <li>Database Management: Expertise in working with both NoSQL (MongoDB) and relational databases (Oracle, MySQL, Sybase) to store and retrieve data efficiently.</li>
-                <li>Testing and Quality Assurance: Implemented testing tools for downstream processes, emphasizing data quality and consistency. Proficient in JUnit4-5 and Mockito for comprehensive testing.</li>
-                <li>Continuous Learning: A dedicated learner with a proactive approach to staying updated on emerging technologies and industry best practices.</li>
-                <li>Versatility: Possess the ability to seamlessly adapt to new technologies and frameworks, ensuring a holistic understanding of the development landscape.</li>
-                <li>Agile Collaboration: Well-versed in agile development methodologies, emphasizing adaptability and collaboration to achieve project success 
+                <li><b>API Development:</b> Experience in designing and implementing APIs and Rest APIs for seamless integration and communication.</li>
+                <li><b>Data Analysis:</b> Skilled in business and financial data analysis, ensuring data-driven insights for informed decision-making.</li>
+                <li><b>UI Development:</b> Proficient in creating dynamic and feature-rich user interfaces using Thymeleaf, JavaScript, HTML, and CSS.</li>
+                <li><b>Database Management:</b> Expertise in working with both NoSQL (MongoDB) and relational databases (Oracle, MySQL, Sybase) to store and retrieve data efficiently.</li>
+                <li><b>Testing and Quality Assurance:</b> Implemented testing tools for downstream processes, emphasizing data quality and consistency. Proficient in JUnit4-5 and Mockito for comprehensive testing.</li>
+                <li><b>Continuous Learning:</b> A dedicated learner with a proactive approach to staying updated on emerging technologies and industry best practices.</li>
+                <li><b>Versatility:</b> Possess the ability to seamlessly adapt to new technologies and frameworks, ensuring a holistic understanding of the development landscape.</li>
+                <li><b>Agile Collaboration:</b> Well-versed in agile development methodologies, emphasizing adaptability and collaboration to achieve project success 
                 and to ensure a smooth flow of the development process through regular meetings and assessments.
                 <br>Also experienced in leading development for minor projects</li>
             </ul>
@@ -112,9 +112,9 @@
                 <ul>
                     <li><b>JDKs:</b> 8-11-17-19</li>
                     <li><b>Relational databases:</b> H2,Oracle, MySQL, Sybase, <b>NoSQL:</b> MongoDB</li>
-                    <li><b>Front end:</b> HTML, CSS, Thymeleaf, Javascript, MVC applications</li>
+                    <li><b>Front end:</b> HTML, CSS, Thymeleaf, Javascript</li>
                     <li><b>Spring famework:</b> Spring Boot, Spring Batch</li>
-                    <li><b>API Development:</b> Rest APIs</li>
+                    <li><b>API Development:</b> RESTful APIs, MVC - Simple controller apps</li>
                     <li><b>Testing:</b> JUnit 4-5, Mockito</li>
                     <li><b>Build tools:</b> Maven, Gradle</li>
                     <li><b>CI/CD:</b> Jenkins</li>
@@ -142,7 +142,6 @@
             </div>
             <div class="rightarticle">
                 <h2>Languages</h2>
-
                 <ul>
                     <li>
                         <p>Hungarian - Mother tongue</p>
@@ -156,11 +155,11 @@
                     <h2>Career Aspirations</h2>
                     <p>Eager to be part of a dynamic and agile group, my goal is to continually expand my knowledge and skill set, 
                         in both back- and front-end development and data analysis, 
-                        creating innovative solutions and ensuring success in future endeavors.
+                        creating innovative solutions and ensuring success in future endeavors. <br>
                         Committed to both personal and professional growth, I am always ready to learn and contribute, 
-                        fostering a collaborative environment where knowledge-sharing and mentorship thrive. 
+                        encouraging a collaborative environment where knowledge-sharing and mentorship thrive. <br>
                         Known for my enthusiasm and willingness to support others, I aspire to be an influential team member, 
-                        fostering innovation and success in the ever-evolving landscape of software development.
+                        fostering innovation and success in the ever-evolving landscape of software development. <br>
                         With a focus on excellence, I aim to achieve success in my developing career and make meaningful contributions to future developments.</p>
                 </div>
             </div>
