--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum vitae</title>
+    <title>Vörös Miklós - CV</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/81e56c14c5.js" crossorigin="anonymous"></script>
 </head>
@@ -27,14 +27,7 @@
                 <p><i class="fa-solid fa-house-chimney"></i><b> Location: </b>Budapest</p>
                 <p><i class="fa-solid fa-envelope"></i><b> E-mail: </b>v.miklos.gyt@gmail.com </p>
                 <p><i class="fa-solid fa-phone"></i><b> Phone: </b>+36308484111 </p>
-            </div>
-            <div class="links">
-                <h2>Links</h2>
                 <a href="https://www.linkedin.com/in/mikl%C3%B3s-v%C3%B6r%C3%B6s-277066234/">My LinkedIn profile</a>
-                <a href="https://github.com/mikica01">My GitHub profile</a>
-            </div>
-            <div class="programmingskillstitle">
-                <h2></h2>
             </div>
             <div class="programmingskills">
                 <img src="images\java.png" style="width: 40px; height: 75px;" alt="java">
@@ -55,42 +48,61 @@
         <div class="split right">
             <div class="rightarticle">
                 <h2>About me</h2>
-                <p>A highly motivated and versatile Java developer at Citibank, I bring a unique background as a former physiotherapist, infusing a holistic approach into my work. 
+                <p>A highly motivated and versatile Java developer at Citibank, I bring a unique background as a former physiotherapist, applying a holistic approach into my work. 
                 Eager to learn and explore new technologies, I am committed to increasing my knowledge base and contributing to the success of innovative projects. <br>
-                I am passionate about leveraging cutting-edge technologies to create innovative solutions. <br>
-                I have a wealth of experience in developing and maintaining robust Java applications. <br>
+                I always focus on bringing innovative, effective and less resource-hungry solutions to the given tasks <br>
                 Furthermore, my expertise extends to business and financial data analysis, UI development with Thymeleaf and JavaScript - 
-                with a keen interest in expanding my skills to encompass front-end development, 
-                and implementing testing tools to ensure data quality and consistency.</p>
+                with an interest in expanding my skills with deeper front-end development knowlegde, 
+                and implementing/maintaining testing tools to ensure data quality and consistency.</p>
             </div>
             <div class="rightarticle">
                 <h2>Key skills and expertise</h2>
                 <ul>
                 <li><b>Java Development:</b> Proven expertise in Java programming, with a focus on delivering efficient and scalable backend solutions for 
                 dynamic Java Spring Boot and Spring Batch applications.</li>
-                <li><b>API Development:</b> Experience in designing and implementing APIs and Rest APIs for seamless integration and communication.</li>
+                <li><b>API Development:</b> Experience in designing and implementing APIs and Rest APIs for communication between applications, microservices</li>
                 <li><b>Data Analysis:</b> Skilled in business and financial data analysis, ensuring data-driven insights for informed decision-making.</li>
                 <li><b>UI Development:</b> Proficient in creating dynamic and feature-rich user interfaces using Thymeleaf, JavaScript, HTML, and CSS.</li>
                 <li><b>Database Management:</b> Expertise in working with both NoSQL (MongoDB) and relational databases (Oracle, MySQL, Sybase) to store and retrieve data efficiently.</li>
-                <li><b>Testing and Quality Assurance:</b> Implemented testing tools for downstream processes, emphasizing data quality and consistency. Proficient in JUnit4-5 and Mockito for comprehensive testing.</li>
-                <li><b>Continuous Learning:</b> A dedicated learner with a proactive approach to staying updated on emerging technologies and industry best practices.</li>
-                <li><b>Versatility:</b> Possess the ability to seamlessly adapt to new technologies and frameworks, ensuring a holistic understanding of the development landscape.</li>
-                <li><b>Agile Collaboration:</b> Well-versed in agile development methodologies, emphasizing adaptability and collaboration to achieve project success 
+                <li><b>Testing and Quality Assurance:</b> Implemented testing tools for downstream processes, emphasizing data quality and consistency. Skilled in JUnit4-5 and Mockito for comprehensive testing.</li>
+                <li><b>Continuous Learning:</b> Always trying to find time to learn something new to improve my skills and expand my knowledge base</li>
+                <li><b>Versatility:</b> Seamlessly adapting to new technologies and new, challenging environments</li>
+                <li><b>Agile Collaboration:</b> Experienced in agile development methodologies, emphasizing adaptability and collaboration to achieve project success 
                 and to ensure a smooth flow of the development process through regular meetings and assessments.
                 <br>Also experienced in leading development for minor projects</li>
             </ul>
             </div>
             <div class="rightarticle">
-                <h2>Work experience</h2>
+                <h2>Relevant work experience</h2>
                 <ul>
-                    <li>
-                        <p><b class="dates">2023. may - </b>Citi - Apps Dev Intermediate Programmer Analyst</p>
+                    <li class="experience">
+                        <p><b class="dates">2023. May - </b>Citi - Apps Dev Intermediate Programmer Analyst</p>
+                        <ul>
+                            <li>Spring boot</li>
+                            <li>Gradle/Maven</li>
+                            <li>Front-end development in HTML, CSS, JavaScript, Thymeleaf</li>
+                            <li>Deep knowledge in testing, JUnit, Mockito, Integration</li>
+                            <li>Comparison tool development to test other teams' releases</li>
+                            <li>Implementation of efficient tools to read/aggregate/compare data from huge files</li>
+                            <li>Leading development in a local team, collaborating with developers from all around the world</li>
+                        </ul>
                     </li>
-                    <li>
-                        <p><b class="dates">2022. july - 2023. may </b>Citi - Apps Dev Programmer Analyst</p>
+                    <li class="experience">
+                        <p><b class="dates">2022. July - 2023. May </b>Citi - Apps Dev Programmer Analyst</p>
+                        <ul>
+                            <li>Spring batch/boot</li>
+                            <li>Maven</li>
+                            <li>SQL - NoSql Databases</li>
+                            <li>Jenkins pipelines</li>
+                            <li>JUnit, Mockito testing</li>
+                            <li>Data, Business analysis</li>
+                            <li>Implementation of data aggregation, visualization in templates by bank regulations and financial requirements</li>
+                            <li>Technological leadership of a financial project</li>
+                            <li>Helping with the onboarding of new junior and senior team members</li>
+                        </ul>
                     </li>
-                    <li>
-                        <p><b class="dates">2017. july - 2022. july - </b>Medical Centre, Hungarian Defence Forces - Physical
+                    <!-- <li> -->
+                        <!-- <p><b class="dates">2017. july - 2022. july - </b>Medical Centre, Hungarian Defence Forces - Physical
                             therapist</p>
                     </li>
                     <li>
@@ -104,7 +116,7 @@
                     <li>
                         <p> <b class="dates">2017. july - 2017. december - </b>Reitter private clinic -
                             Post myocardial infarction rehabilitation </p>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <div class="rightarticle">
@@ -114,14 +126,14 @@
                     <li><b>Relational databases:</b> H2,Oracle, MySQL, Sybase, <b>NoSQL:</b> MongoDB</li>
                     <li><b>Front end:</b> HTML, CSS, Thymeleaf, Javascript</li>
                     <li><b>Spring famework:</b> Spring Boot, Spring Batch</li>
-                    <li><b>API Development:</b> RESTful APIs, MVC - Simple controller apps</li>
+                    <li><b>API Development:</b> RESTful APIs, MVC</li>
                     <li><b>Testing:</b> JUnit 4-5, Mockito</li>
                     <li><b>Build tools:</b> Maven, Gradle</li>
                     <li><b>CI/CD:</b> Jenkins</li>
                     <li><b>Code Quality:</b> SonarQube</li>
                     <li><b>Collaboration tools:</b> GitHub, BitBucket, Jira, Confluence</li>
                     <li><b>Version control:</b> Git</li>
-                    <li><b>Scripting:</b> Bash, linux commands</li>
+                    <li><b>Scripting:</b> Sh/Ksh</li>
                 </ul>
             </div>
             <div class="rightarticle">
@@ -157,10 +169,10 @@
                         in both back- and front-end development and data analysis, 
                         creating innovative solutions and ensuring success in future endeavors. <br>
                         Committed to both personal and professional growth, I am always ready to learn and contribute, 
-                        encouraging a collaborative environment where knowledge-sharing and mentorship thrive. <br>
-                        Known for my enthusiasm and willingness to support others, I aspire to be an influential team member, 
-                        fostering innovation and success in the ever-evolving landscape of software development. <br>
-                        With a focus on excellence, I aim to achieve success in my developing career and make meaningful contributions to future developments.</p>
+                        seeking a collaborative environment where knowledge-sharing and mentorship is the way to go. <br>
+                        Known for my enthusiasm and willingness to support others, I see myself as an influential team member, 
+                        bringing innovation and success in the fields of software development. <br>
+                        I aim to achieve success in my developing career trying to always provide the best of my knowledge</p>
                 </div>
             </div>
         </div>
