--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </ul>
             </div>
             <div class="rightarticle">
-                <h2>Relevant work experience</h2>
+                <h2>Relevant experience</h2>
                 <ul>
                     <li class="experience">
                         <p><b class="dates">2023. May - </b>Citi - Apps Dev Intermediate Programmer Analyst</p>
@@ -101,22 +101,20 @@
                             <li>Helping with the onboarding of new junior and senior team members</li>
                         </ul>
                     </li>
-                    <!-- <li> -->
-                        <!-- <p><b class="dates">2017. july - 2022. july - </b>Medical Centre, Hungarian Defence Forces - Physical
-                            therapist</p>
+                    <li class="experience">
+                        <p><b class="dates">2021. May - </b>Udemy courses, self-learning</p>
+                        <ul>
+                            <li>Java basics</li>
+                            <li>Algorithms</li>
+                            <li>Problem-solving</li>
+                            <li>Gradle</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>MySql, H2 Databases</li>
+                            <li>Jenkins pipelines</li>
+                            <li>JUnit testing</li>
+                        </ul>
                     </li>
-                    <li>
-                        <p><b class="dates">2018. july - 2021. july - </b>Vitalorg private clinic - Physical therapist
-                        </p>
-                    </li>
-                    <li>
-                        <p> <b class="dates">2017. december - 2018. august - </b> </b>Life1 Corvin - Masseur,
-                            Physical therapist</p>
-                    </li>
-                    <li>
-                        <p> <b class="dates">2017. july - 2017. december - </b>Reitter private clinic -
-                            Post myocardial infarction rehabilitation </p>
-                    </li> -->
                 </ul>
             </div>
             <div class="rightarticle">
