CV refreshed with senior position details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p><i class="fa-solid fa-house-chimney"></i><b> Location: </b>Budapest</p>
                 <p><i class="fa-solid fa-envelope"></i><b> E-mail: </b>v.miklos.gyt@gmail.com </p>
                 <p><i class="fa-solid fa-phone"></i><b> Phone: </b>+36308484111 </p>
-                <a href="https://www.linkedin.com/in/mikl%C3%B3s-v%C3%B6r%C3%B6s-277066234/">My LinkedIn profile</a>
+                <a id="linkedin" href="https://www.linkedin.com/in/mikl%C3%B3s-v%C3%B6r%C3%B6s-277066234/">My LinkedIn profile</a>
             </div>
             <div class="programmingskills">
                 <img src="images\java.png" style="width: 40px; height: 75px;" alt="java">
@@ -76,15 +76,31 @@
                 <h2>Relevant experience</h2>
                 <ul>
                     <li class="experience">
-                        <p><b class="dates">2023. May - </b>Citi - Apps Dev Intermediate Programmer Analyst</p>
+                        <p><b class="dates">2024. Oct - </b>Citi - Assistant Vice President - Engineer Senior Analyst</p>
+                        <ul>
+                            <li>Spring boot</li>
+                            <li>Cryptography</li>
+                            <li>Bash</li>
+                            <li>Linux, Unix</li>
+                            <li>Container service - Docker, Kubernetes integration</li>
+                            <li>Application deployment with Harness</li>
+                            <li>Additional front-end development skills - React (jsx, tsx)</li>
+                            <li>BDD and TDD Testing concepts - Cucumber, Mockito, JUnit</li>
+                        </ul>
+                    </li>
+                    <li class="experience">
+                        <p><b class="dates">2023. May - 2024. Oct </b>Citi - Apps Dev Intermediate Programmer Analyst</p>
                         <ul>
                             <li>Spring boot</li>
                             <li>Gradle/Maven</li>
+                            <li>Bash</li>
+                            <li>Linux, Unix</li>
                             <li>Front-end development in HTML, CSS, JavaScript, Thymeleaf</li>
-                            <li>Deep knowledge in testing, JUnit, Mockito, Integration</li>
-                            <li>Comparison tool development to test other teams' releases</li>
+                            <li>Deep knowledge in testing, JUnit, Mockito, Integration - TDD</li>
+                            <li>Comparison tool development to test other teams' release outputs</li>
                             <li>Implementation of efficient tools to read/aggregate/compare data from huge files</li>
                             <li>Leading development in a local team, collaborating with developers from all around the world</li>
+                            <li>Front-end development for various applications with JS and Thymeleaf</li>
                         </ul>
                     </li>
                     <li class="experience">
@@ -92,9 +108,10 @@
                         <ul>
                             <li>Spring batch/boot</li>
                             <li>Maven</li>
+                            <li>Linux, Unix</li>
                             <li>SQL - NoSql Databases</li>
                             <li>Jenkins pipelines</li>
-                            <li>JUnit, Mockito testing</li>
+                            <li>JUnit, Mockito testing - TDD</li>
                             <li>Data, Business analysis</li>
                             <li>Implementation of data aggregation, visualization in templates by bank regulations and financial requirements</li>
                             <li>Technological leadership of a financial project</li>
