Added redux  experience

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               <button>Bash</button>
               <button>Linux</button>
               <button>React</button>
+              <button>Redux</button>
               <button>Node.js</button>
               <button>Intellij</button>
               <button>Oracle SQL</button>
@@ -117,8 +118,8 @@
             </li>
             <li>
               <b>UI Development:</b> Proficient in creating dynamic and
-              feature-rich user interfaces using Thymeleaf, JavaScript, HTML,
-              and CSS.
+              feature-rich user interfaces using React, Redux, Thymeleaf,
+              JavaScript, Typescript, HTML, and CSS.
             </li>
             <li>
               <b>Database Management:</b> Expertise in working with both NoSQL
@@ -165,7 +166,7 @@
                 <li>Application deployment with Harness</li>
                 <li>
                   Additional front-end development skills - React (jsx, tsx),
-                  Typescript, Node.js
+                  Redux, Typescript, Node.js
                 </li>
                 <li>BDD and TDD Testing concepts - Cucumber, Mockito, JUnit</li>
               </ul>
