Added jest to experiences

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
               <button>Linux</button>
               <button>React</button>
               <button>Redux</button>
+              <button>Jest</button>
               <button>Node.js</button>
               <button>Intellij</button>
               <button>Oracle SQL</button>
@@ -165,8 +166,8 @@
                 <li>Container service - Docker, Kubernetes integration</li>
                 <li>Application deployment with Harness</li>
                 <li>
-                  Additional front-end development skills - React (jsx, tsx),
-                  Redux, Typescript, Node.js
+                  Additional front-end development and testing skills - React
+                  (jsx, tsx), Redux, Typescript, Node.js, Jest
                 </li>
                 <li>BDD and TDD Testing concepts - Cucumber, Mockito, JUnit</li>
               </ul>
